--- a/Bitacora/s3122017.md
+++ b/Bitacora/s3122017.md
@@ -37,40 +37,7 @@
 	- [ ] Carro
 
 # How it works? (Requerimientos e instalación)
-## [JMeter](https://www.tutorialspoint.com/jmeter/jmeter_quick_guide.htm)
-### Entorno y requerimientos
-El número en negrita debe ser mayor a 1.7
-```sh
- $ java -version
- openjdk version "**1.8**.0_151"
- OpenJDK Runtime Environment (build 1.8.0_151-8u151-b12-0ubuntu0.16.04.2-b12)
- OpenJDK 64-Bit Server VM (build 25.151-b12, mixed mode)
-```
 
-Si no, podemos actualizar Java con los siguientes comandos
-```sh
-$ sudo apt-get update
-$ sudo apt-get install default-jdk
-```
-
-### Instalación de JMeter
-Buscar la última versión de *Binario* de JMeter comprimido como .tgz [aquí](http://jmeter.apache.org/download_jmeter.cgi) 
-
-Luego, en terminal descargamos el binario
-
-```sh
- $ wget http://www-eu.apache.org/dist//jmeter/binaries/apache-jmeter-3.3.tgz 
-
-# Descomprimimos el directorio
- $ tar -xf apache-jmeter-3.3.tgz 
- ```
-
-Entramos a la carpeta ``apache-jmeter-x.x/bin/`` y abrimos JMeter
-
-```sh
- $ cd apache-jmeter-3.3/bin/
- $ ./jmeter
-```
 ## [Selenium](https://www.adictosaltrabajo.com/tutoriales/selenium-ide/)
 ### Entorno y requerimientos
 - ***Sistema operativo:*** Ubuntu 16.04.3 LTS (tambien está soportado Windows, OS X, Solaris, en verdad lo importante es el browser)
@@ -107,3 +74,41 @@ echo "\r\nStarting up Selenium server ...\r\n"
 DISPLAY=:1 xvfb-run java -jar ~/selenium/selenium-server-standalone-3.8.1.jar
 
 ``` 
+
+### Functional Testing
+
+
+## [JMeter](https://www.tutorialspoint.com/jmeter/jmeter_quick_guide.htm)
+### Entorno y requerimientos
+El número en negrita debe ser mayor a 1.7
+```sh
+ $ java -version
+ openjdk version "**1.8**.0_151"
+ OpenJDK Runtime Environment (build 1.8.0_151-8u151-b12-0ubuntu0.16.04.2-b12)
+ OpenJDK 64-Bit Server VM (build 25.151-b12, mixed mode)
+```
+
+Si no, podemos actualizar Java con los siguientes comandos
+```sh
+$ sudo apt-get update
+$ sudo apt-get install default-jdk
+```
+
+### Instalación de JMeter
+Buscar la última versión de *Binario* de JMeter comprimido como .tgz [aquí](http://jmeter.apache.org/download_jmeter.cgi) 
+
+Luego, en terminal descargamos el binario
+
+```sh
+ $ wget http://www-eu.apache.org/dist//jmeter/binaries/apache-jmeter-3.3.tgz 
+
+# Descomprimimos el directorio
+ $ tar -xf apache-jmeter-3.3.tgz 
+ ```
+
+Entramos a la carpeta ``apache-jmeter-x.x/bin/`` y abrimos JMeter
+
+```sh
+ $ cd apache-jmeter-3.3/bin/
+ $ ./jmeter
+```
