--- a/Bitacora/s3122017.md
+++ b/Bitacora/s3122017.md
@@ -45,7 +45,13 @@
 - ***Lenguaje de programación*** : Java, con opciones de C#, Perl, PHP, Python y Ruby
 
 
-### Instalación de Selenium HQ
+### Instalación de Selenium
+#### [Selenium IDE (plugin Firefox)](https://www.guru99.com/install-selenuim-ide.html)
+:exclamation: **Importante:** no funciona en versiones de Firefox mayores a 55, se recomienda versiones 47.0.1 o mayor al ser más estables.
+
+
+
+#### Selenium Server
 en este caso se usó la [última versión](http://selenium-release.storage.googleapis.com/index.html) disponible de SeleniumHQ
  - ACTUAL: selenium-server-standalone-3.8.1.jar
 
@@ -112,3 +118,16 @@ Entramos a la carpeta ``apache-jmeter-x.x/bin/`` y abrimos JMeter
  $ cd apache-jmeter-3.3/bin/
  $ ./jmeter
 ```
+
+# Plan de acción
+1. Crear los test funcionales de *Registry* con Selenium (para aprender a usar la IDE) siguiendo las rutas y verificando el contenido
+	- Testear recorridos
+	- Testear contenido de los enlaces, accesados por rutas o por enlace directo.
+	- Buscar real independencia de la interfaz de la página al crear los test
+	- Buscar total independencia del browser al momento de exprotar el test como script en Java
+	- Analizar la opción de migrar el script de Selenium a HTMLUnit si no se encuentra una forma de independizarlo del browser
+2. Mapear y crear test funcionales para *Registrar*
+	- Para la creación de cuentar usar el truco de gmail: ```ejemplo+n@gmail.com```
+3. Documentarse sobre enfoques de test de stress
+4. Definir enfoque y objetivos del test
+	- Usar datos obtenidos de Google Analytics para trazar rutas y cargas
