--- a/Bitacora/s3122017.md
+++ b/Bitacora/s3122017.md
@@ -45,10 +45,11 @@
 - ***Lenguaje de programación*** : Java, con opciones de C#, Perl, PHP, Python y Ruby
 
 
-### Instalación de Selenium
+### Instalación de Katalon (Selenium IDE)
 #### [Selenium IDE (plugin Firefox)](https://www.guru99.com/install-selenuim-ide.html)
-:exclamation: **Importante:** no funciona en versiones de Firefox mayores a 55, se recomienda versiones 47.0.1 o mayor al ser más estables.
+:exclamation: **Problema:** no funciona en versiones de Firefox mayores a 55, se recomienda versiones 47.0.1 o mayor al ser más estables.
 
+:exclamation; **Solución:** Katalon es Selenium IDE para versiones 55+ de Firefox :D
 
 
 #### Selenium Server
