--- a/Bitacora/s3122017.md
+++ b/Bitacora/s3122017.md
@@ -38,7 +38,7 @@
 
 # How it works? (Requerimientos e instalación)
 
-## [Selenium](https://www.adictosaltrabajo.com/tutoriales/selenium-ide/)
+## [Selenium](https://www.adictosaltrabajo.com/tutoriales/selenium-ide/) :exclamation: No se va a usar
 ### Entorno y requerimientos
 - ***Sistema operativo:*** Ubuntu 16.04.3 LTS (tambien está soportado Windows, OS X, Solaris, en verdad lo importante es el browser)
 - ***Versión de Firefox:*** Firefox Quantum 57.0.1 (64-bit) , aunque basta con Firefox 2 o 3
@@ -52,37 +52,63 @@
 :exclamation; **Solución:** Katalon es Selenium IDE para versiones 55+ de Firefox :D
 
 
-#### Selenium Server
-en este caso se usó la [última versión](http://selenium-release.storage.googleapis.com/index.html) disponible de SeleniumHQ
- - ACTUAL: selenium-server-standalone-3.8.1.jar
+### ¿Por que no?
+Actualmente Katalon Studio no es soportado en Linux en su totalidad, si bien su IDE Katalon recorder funciona como plugin tiene un uso muy limitado ()y casi ni existe documentación al respecto)
 
-```sh
-$ sudo apt-get update
+Por lo que he decidido probar HtmlUnit para el testeo funcional, con el apoyo de Katalon al identificar las componentes.
 
-# Make a directory for Selenium
-$ mkdir ~/selenium
-$ cd ~/selenium
+## [HtmlUnit](http://htmlunit.sourceforge.net/gettingStarted.html)
+Browser sin GUI basado en Java, que permite la manipulación de paginas web, como rellenar formularios, clickear links.
+- ***Versión utilizada*** : 2.8
 
-#Get selenium
-$ sudo wget http://selenium-release.storage.googleapis.com/3.8/selenium-server-standalone-3.8.1.jar
+### Instalación de HtmlUnit en Eclipse
+1. Crear un nuevo proyecto Jave (default settings)
+2. Crear una carpeta llamada "lib" (Click derecho en proyecto: New -> Folder)
+3. [Descargar](https://sourceforge.net/projects/htmlunit/files/htmlunit/) la librería de HtmlUnit (htmlunit-X.X-bin.zip)
+4. Descomprimir la carpeta "/htmlunit-X.X/lib" en la carpeta del proyecto "lib"
+5. Click derecho en el proyecto : Build Path -> Configure Build Path
+6. En la pestaña "Libraries" y clickeamos _Add JARs..._
+7. Buscamos nuestra carpeta "lib", seleccionamos todos los elementos de esta y cerramos las ventanas
+8. Para verificar que todo funciona se puede probar el siguiente código:
+```java
+import java.io.IOException;
+import java.net.MalformedURLException;
 
-# Install headless Java runtime
-$ sudo apt-get install openjdk-8-jre-headless -y
+import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
+import com.gargoylesoftware.htmlunit.WebClient;
 
-# Install Firefox
-$ sudo apt-get install firefox -y
+public class Test {
+    public static void main(final String[] args) {
+        final WebClient webClient = new WebClient();
+        webClient.setTimeout(1000);
+        try {
+            System.out.println("Querying");
+            webClient.getPage("http://www.google.com");
+            System.out.println("Success");
+        } catch (final FailingHttpStatusCodeException e) {
+            System.out.println("One");
+            e.printStackTrace();
+        } catch (final MalformedURLException e) {
+            System.out.println("Two");
+            e.printStackTrace();
+        } catch (final IOException e) {
+            System.out.println("Three");
+            e.printStackTrace();
+        } catch (final Exception e) {
+            System.out.println("Four");
+            e.printStackTrace();
+        }
+        System.out.println("Finished");
+    }
+}
+```
+	donde si todo esta bien deberíamos tener la siguiente respuesta:
+	```java
+Querying
+Success
+Finished
+	```
 
-# Install headless GUI for firefox.  'Xvfb is a display server that performs graphical operations in memory'
-sudo apt-get install xvfb -y
-
-# Finally, starting up Selenium server
-#
-echo "\r\nStarting up Selenium server ...\r\n"
-DISPLAY=:1 xvfb-run java -jar ~/selenium/selenium-server-standalone-3.8.1.jar
-
-``` 
-
-### Functional Testing
 
 
 ## [JMeter](https://www.tutorialspoint.com/jmeter/jmeter_quick_guide.htm)
