--- a/Bitacora/s3122017.md
+++ b/Bitacora/s3122017.md
@@ -109,41 +109,6 @@ Success
 Finished
 	```
 
-## [JMeter](https://www.tutorialspoint.com/jmeter/jmeter_quick_guide.htm)
-### Entorno y requerimientos
-El número en negrita debe ser mayor a 1.7
-```sh
- $ java -version
- openjdk version "**1.8**.0_151"
- OpenJDK Runtime Environment (build 1.8.0_151-8u151-b12-0ubuntu0.16.04.2-b12)
- OpenJDK 64-Bit Server VM (build 25.151-b12, mixed mode)
-```
-
-Si no, podemos actualizar Java con los siguientes comandos
-```sh
-$ sudo apt-get update
-$ sudo apt-get install default-jdk
-```
-
-### Instalación de JMeter
-Buscar la última versión de *Binario* de JMeter comprimido como .tgz [aquí](http://jmeter.apache.org/download_jmeter.cgi) 
-
-Luego, en terminal descargamos el binario
-
-```sh
- $ wget http://www-eu.apache.org/dist//jmeter/binaries/apache-jmeter-3.3.tgz 
-
-# Descomprimimos el directorio
- $ tar -xf apache-jmeter-3.3.tgz 
- ```
-
-Entramos a la carpeta ``apache-jmeter-x.x/bin/`` y abrimos JMeter
-
-```sh
- $ cd apache-jmeter-3.3/bin/
- $ ./jmeter
-```
-
 # Plan de acción
 1. Crear los test funcionales de *Registry* con Selenium (para aprender a usar la IDE) siguiendo las rutas y verificando el contenido
 	- Testear recorridos
@@ -156,3 +121,33 @@ Entramos a la carpeta ``apache-jmeter-x.x/bin/`` y abrimos JMeter
 3. Documentarse sobre enfoques de test de stress
 4. Definir enfoque y objetivos del test
 	- Usar datos obtenidos de Google Analytics para trazar rutas y cargas
+
+# Definición de test funcionales para Registry
+## Unitarios
+La idea es, por acceso directo a la página, verificar el funcionamiento correcto de esta.
+- [ ] Eliminados
+	- verfifcar fechas de los sitios mostrados según filtro
+	- verificar orden y consistencia de la información mostrada
+- [ ] Búsqueda 
+	- *Exacta*
+	- *Que contenga*
+	- *Comience con*
+	- *Termine con*
+	- verificar correlación de búsqueda
+- [ ] Whois
+	- *Exacta*
+	- *Que contenga*
+	- *Comience con*
+	- *Termine con*
+	- verificar correlación de búsqueda y datos mostrados
+	- validar redireccionamientos
+- [ ] Últimos registrados 
+	- verfifcar fechas de los sitios mostrados según filtro
+	- verificar orden y consistencia de la información mostrada
+
+## Ruteo
+Test que verifican que la página es accesible para el usuario mediante navegación por el sitio
+- [ ] Eliminados
+- [ ] Búsqueda
+- [ ] Whois
+- [ ] Últimos registrados
