--- a/Bitacora/s3122017.md
+++ b/Bitacora/s3122017.md
@@ -107,7 +107,7 @@ public class Test {
 Querying
 Success
 Finished
-	```
+```
 
 # Plan de acción
 1. Crear los test funcionales de *Registry* con Selenium (para aprender a usar la IDE) siguiendo las rutas y verificando el contenido
@@ -123,6 +123,8 @@ Finished
 	- Usar datos obtenidos de Google Analytics para trazar rutas y cargas
 
 # Definición de test funcionales para Registry
+La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema Registry hago correr los test de acceso, los que asu vez llaman a los test unitarios.
+
 ## Unitarios
 La idea es, por acceso directo a la página, verificar el funcionamiento correcto de esta.
 - [ ] Eliminados
@@ -145,7 +147,7 @@ La idea es, por acceso directo a la página, verificar el funcionamiento correct
 	- verfifcar fechas de los sitios mostrados según filtro
 	- verificar orden y consistencia de la información mostrada
 
-## Ruteo
+## Acceso
 Test que verifican que la página es accesible para el usuario mediante navegación por el sitio
 - [ ] Eliminados
 - [ ] Búsqueda
