--- a/Bitacora/s4122017.md
+++ b/Bitacora/s4122017.md
@@ -21,11 +21,11 @@ La idea es, por acceso directo a la página, verificar el funcionamiento correct
 - [ ] Eliminados
 	- verfifcar fechas de los sitios mostrados según filtro
 	- verificar orden y consistencia de la información mostrada
-- [ ] Búsqueda 
+- [x] Búsqueda 
 	- [x] *Exacta* verificar resultado de búsqueda
 	- [x] *Que contenga* verificar resultado de búsqueda
-	- [ ] *Comience con* verificar resultado de búsqueda
-	- [ ] *Termine con* verificar resultado de búsqueda
+	- [x] *Comience con* verificar resultado de búsqueda
+	- [x] *Termine con* verificar resultado de búsqueda
 	- [x] verificar respuesta de búsqueda infructuosa
 	- casos de expresiones con:
 		- [x] alfabeticas americanas (Simple)
