--- a/Bitacora/s4122017.md
+++ b/Bitacora/s4122017.md
@@ -32,12 +32,16 @@ La idea es, por acceso directo a la página, verificar el funcionamiento correct
 		- [x] alfabetica latina (Special)
 		- [x] numérica (number)
 - [ ] Whois
-	- *Exacta*
-	- *Que contenga*
-	- *Comience con*
-	- *Termine con*
-	- verificar correlación de búsqueda y datos mostrados
-	- validar redireccionamientos
+	- ***Validar contenido mostrado***
+		- [x] dominio no registrado
+		- Dominio inscrito
+			- [x] Datos básicos
+			- [~] Contactos
+			- [~] Servidores
+	- Validar para tres tipos de sitios:
+		- [x] Alfabeto americano
+		- [ ] Alfabeto latino
+		- [ ] Numérico
 - [ ] Últimos registrados 
 	- verfifcar fechas de los sitios mostrados según filtro
 	- verificar orden y consistencia de la información mostrada
