--- a/Bitacora/s4122017.md
+++ b/Bitacora/s4122017.md
@@ -40,8 +40,8 @@ La idea es, por acceso directo a la página, verificar el funcionamiento correct
 			- [~] Servidores
 	- Validar para tres tipos de sitios:
 		- [x] Alfabeto americano
-		- [ ] Alfabeto latino
-		- [ ] Numérico
+		- [~] Alfabeto latino
+		- [~] Numérico
 - [ ] Últimos registrados 
 	- verfifcar fechas de los sitios mostrados según filtro
 	- verificar orden y consistencia de la información mostrada
@@ -52,3 +52,7 @@ Test que verifican que la página es accesible para el usuario mediante navegaci
 - [ ] Búsqueda
 - [ ] Whois
 - [ ] Últimos registrados
+
+## Anotaciones
+- Tanto en busqueda como en Whois, al probar con el alfabeto latino, todo se va a la cresta. Ver configuraciones para UTF8 (?)
+- Whois tiene ciertos problemas de reconocimiento al cambiar el alfabeto de prueba, como si cambiar su estructura de página... weird
