--- a/Bitacora/s4122017.md
+++ b/Bitacora/s4122017.md
@@ -18,9 +18,13 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 
 ## Unitarios
 La idea es, por acceso directo a la página, verificar el funcionamiento correcto de esta.
-- [ ] Eliminados
-	- verfifcar fechas de los sitios mostrados según filtro
-	- verificar orden y consistencia de la información mostrada
+- [x] Eliminados
+	- ***Verfifcar contenido***
+		- [x] conteo de sitios correcto
+		- [x] boton de inscripción
+	- ***Cargar páginas***
+		- [x] Día "d"
+		- [x] Semana "w"
 - [x] Búsqueda 
 	- [x] *Exacta* verificar resultado de búsqueda
 	- [x] *Que contenga* verificar resultado de búsqueda
@@ -42,9 +46,17 @@ La idea es, por acceso directo a la página, verificar el funcionamiento correct
 		- [x] Alfabeto americano
 		- [~] Alfabeto latino
 		- [~] Numérico
-- [ ] Últimos registrados 
-	- verfifcar fechas de los sitios mostrados según filtro
-	- verificar orden y consistencia de la información mostrada
+- [x] Últimos registrados 
+	- ***Verfifcar contenido***
+		- [x] conteo de sitios correcto
+		- [x] fecha anterior a la actual
+		- [x] fechas en orden descendente
+		- [x] redirección a who is
+	- ***Cargar páginas*** de el/la ultim@ 
+		- [x] Hora "h"
+		- [x] Día "d"
+		- [x] Semana "w"
+		- [x] Mes "m"
 
 ## Acceso
 Test que verifican que la página es accesible para el usuario mediante navegación por el sitio
@@ -56,3 +68,9 @@ Test que verifican que la página es accesible para el usuario mediante navegaci
 ## Anotaciones
 - Tanto en busqueda como en Whois, al probar con el alfabeto latino, todo se va a la cresta. Ver configuraciones para UTF8 (?)
 - Whois tiene ciertos problemas de reconocimiento al cambiar el alfabeto de prueba, como si cambiar su estructura de página... weird
+
+- ESTO ES EL PROBLEMA con los caracteres especiales:
+```
+viñalarosawine.cl
+Whois.do?d=vi%C3%B1alarosawine.cl
+```
