--- a/Bitacora/s4122017.md
+++ b/Bitacora/s4122017.md
@@ -40,12 +40,12 @@ La idea es, por acceso directo a la página, verificar el funcionamiento correct
 		- [x] dominio no registrado
 		- Dominio inscrito
 			- [x] Datos básicos
-			- [~] Contactos
-			- [~] Servidores
+			- [x] Contactos
+			- [x] Servidores
 	- Validar para tres tipos de sitios:
 		- [x] Alfabeto americano
 		- [~] Alfabeto latino
-		- [~] Numérico
+		- [x] Numérico
 - [x] Últimos registrados 
 	- ***Verfifcar contenido***
 		- [x] conteo de sitios correcto
@@ -66,11 +66,14 @@ Test que verifican que la página es accesible para el usuario mediante navegaci
 - [ ] Últimos registrados
 
 ## Anotaciones
-- Tanto en busqueda como en Whois, al probar con el alfabeto latino, todo se va a la cresta. Ver configuraciones para UTF8 (?)
+- Tanto en busqueda como en Whois, al probar con el alfabeto latino, todo se va a las pailas. Ver configuraciones para UTF8 (?)
 - Whois tiene ciertos problemas de reconocimiento al cambiar el alfabeto de prueba, como si cambiar su estructura de página... weird
+- Whois tenia problemas con el alfabeto numerico, esto debido a que el boton de renovar no solo puede dirigir a _renovar.do_ sino tambien a _autoatencion_
 
 - ESTO ES EL PROBLEMA con los caracteres especiales:
 ```
 viñalarosawine.cl
 Whois.do?d=vi%C3%B1alarosawine.cl
 ```
+
+- NIC CHile es un Agente registrador particular que no tiene informaciónes de contacto :) (se solucionó con una varable global nic y un condicional en verifyContacts)
