--- a/Bitacora/s4122017.md
+++ b/Bitacora/s4122017.md
@@ -33,7 +33,7 @@ La idea es, por acceso directo a la página, verificar el funcionamiento correct
 	- [x] verificar respuesta de búsqueda infructuosa
 	- casos de expresiones con:
 		- [x] alfabeticas americanas (Simple)
-		- [x] alfabetica latina (Special)
+		- [~] alfabetica latina (Special)
 		- [x] numérica (number)
 - [ ] Whois
 	- ***Validar contenido mostrado***
