--- a/Bitacora/s6012018.md
+++ b/Bitacora/s6012018.md
@@ -1,5 +1,3 @@
-s6012018
-
 # 08-12012018
 
 # Definición de test funcionales para Registrar
@@ -27,7 +25,22 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 		- [ ] Grabar Usuario
 	- [ ] Agregar Dominio
 		- [ ] Crear Dominio
-	- [ ] Mis Dominios
+	- [ ] **Mis Dominios**
+		- [ ] Verificar listado de dominios (checkbox, estado, dominio,titular,cargos contacto,expiracion,carrito)
+		- ***Filtros***
+			- [ ] Todos
+			- [ ] Contacto/cualquiera
+			- [ ] Contacto/Comercial
+			- [ ] Contacto/Tecnico
+			- [ ] Contacto/Administrativo
+			- [ ] Estado/Todos
+			- [ ] Estado/Inscritos
+			- [ ] Estado/No Pagado
+			- [ ] Estado/En conflicto
+			- [ ] Estado/En restauración
+			- [ ] Estado/BLoqueados
+			- [ ] Estado/Eliminados
+		- ***Modificar Dominio***
 	- [ ] Comprobantes
 	- [ ] Avisos
 	- [ ] Carro
