--- a/Bitacora/s6012018.md
+++ b/Bitacora/s6012018.md
@@ -29,11 +29,11 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 		- [ ] Verificar listado de dominios (checkbox, estado, dominio,titular,cargos contacto,expiracion,carrito)
 		- ***Filtros***
 			- [ ] Todos
-			- [ ] Contacto/cualquiera
+			- Contacto/cualquiera
 			- [ ] Contacto/Comercial
 			- [ ] Contacto/Tecnico
 			- [ ] Contacto/Administrativo
-			- [ ] Estado/Todos
+			- Estado/Todos
 			- [ ] Estado/Inscritos
 			- [ ] Estado/No Pagado
 			- [ ] Estado/En conflicto
