--- a/Bitacora/s6012018.md
+++ b/Bitacora/s6012018.md
@@ -26,9 +26,16 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 	- [ ] Agregar Dominio
 		- [ ] Crear Dominio
 	- [ ] **Mis Dominios**
-		- [ ] Verificar listado de dominios (checkbox, estado, dominio,titular,cargos contacto,expiracion,carrito)
+		- [ ] Verificar listado de dominios 
+			- [x] checkbox
+			- [ ] estado
+			- [x] dominio
+			- [x] titular
+			- [ ] cargos contacto
+			- [ ] expiracion
+			- [ ] carrito
 		- ***Filtros***
-			- [ ] Todos
+			- [x] Todos
 			- Contacto/cualquiera
 			- [ ] Contacto/Comercial
 			- [ ] Contacto/Tecnico
