--- a/Bitacora/s6012018.md
+++ b/Bitacora/s6012018.md
@@ -25,6 +25,7 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 		- [ ] Grabar Usuario
 	- [ ] Agregar Dominio
 		- [ ] Crear Dominio
+	- [ ] Editar Dominio
 	- [ ] **Mis Dominios**
 		- [ ] Verificar listado de dominios 
 			- [x] checkbox
@@ -51,3 +52,12 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 	- [ ] Comprobantes
 	- [ ] Avisos
 	- [ ] Carro
+
+## Observaciones y comentarios
+
+- Tha great MAGIIIIIC!! para esperar que carguen JavaScript :D
+```java
+	synchronized (refresh) {
+		            refresh.wait(2000); //wait
+		        }
+```
