--- a/Bitacora/s6012018.md
+++ b/Bitacora/s6012018.md
@@ -33,21 +33,21 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 			- [x] dominio
 			- [x] titular
 			- [ ] cargos contacto
-			- [ ] expiracion
-			- [ ] carrito
+			- [x] expiracion
+			- [x] carrito
 		- ***Filtros***
 			- [x] Todos
 			- Contacto/cualquiera
-			- [ ] Contacto/Comercial
-			- [ ] Contacto/Tecnico
-			- [ ] Contacto/Administrativo
+			- [x] Contacto/Comercial
+			- [x] Contacto/Tecnico
+			- [x] Contacto/Administrativo
 			- Estado/Todos
-			- [ ] Estado/Inscritos
-			- [ ] Estado/No Pagado
-			- [ ] Estado/En conflicto
-			- [ ] Estado/En restauración
-			- [ ] Estado/BLoqueados
-			- [ ] Estado/Eliminados
+			- [x] Estado/Inscritos
+			- [x] Estado/No Pagado
+			- [x] Estado/En conflicto
+			- [x] Estado/En restauración
+			- [x] Estado/BLoqueados
+			- [x] Estado/Eliminados
 		- ***Modificar Dominio***
 	- [ ] Comprobantes
 	- [ ] Avisos
