--- a/Bitacora/s6012018.md
+++ b/Bitacora/s6012018.md
@@ -61,3 +61,37 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 		            refresh.wait(2000); //wait
 		        }
 ```
+
+- Para comprobantes vacío:
+
+```html
+<div class="mensaje" style="border: 1px solid #000000;">
+	<div class="enc_mensaje">
+		<p style="position: relative;">
+			<img style="float: right;" src="static/images/ico_info.png" alt="Información"> <big><b>Información</b> </big>
+		</p>
+	</div>
+	<ul>
+		<li class="mensaje_txt">No tiene dominios que se encuentren
+			facturados, por lo cual, tampoco Documentos Tributarios
+			Electronicos asociados.</li>
+	</ul>
+</div>	
+```
+
+- Para carro de compra vacío:
+```html			
+<div class="enc_mensaje">
+	<p style="width:400px; float:left;">					 
+		<b>Información</b>
+	</p>
+	<img style="float: right;" src="static/images/ico_info.png" alt="Información"> 
+</div>
+<ul>
+	
+		<li class="mensaje_txt">						
+			El carro de compras se encuentra vacío.
+		</li>
+	
+</ul>
+```
