--- a/Bitacora/s6012018.md
+++ b/Bitacora/s6012018.md
@@ -49,7 +49,17 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 			- [x] Estado/BLoqueados
 			- [x] Estado/Eliminados
 		- ***Modificar Dominio***
+			- [x] redirección
 	- [ ] Comprobantes
+		- [ ] Iniciar sesión
+		- [ ] Acceder a DTE
+		- [ ] Elección de dominio
+		- **Verificar resultados por dominio**
+			- [ ] Sin dominios
+			- [ ] Nro Documento
+			- [ ] Fecha
+			- [ ] tipo de documento
+			- [ ] Verificar links de 'Descarga' (xlm y pdf)
 	- [ ] Avisos
 	- [ ] Carro
 
@@ -77,6 +87,32 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 			Electronicos asociados.</li>
 	</ul>
 </div>	
+```
+
+- Comprobantes con datos:
+
+```html			
+<div class="caja_dominio3">
+	<div class="contenedor_datos">
+		<div class="fecha_mini">
+			<p>456669</p>
+		</div>
+		<div class="fecha_mini">
+			<p>2017-12-11</p>
+		</div>
+		<div class="fecha_mini">
+			<p>Boleta Electrónica</p>
+		</div>
+		<div>
+			
+			<a href="/registrar/getDTE.do?folio=456669&amp;tipoDTE=BOLETA&amp;idDominio=2587935&amp;format=XML"> <img src="static/images/icon_xml.png" alt="Descargar XML" title="Descargar XML" style="border: none;">
+			</a>
+			
+			<a href="/registrar/getDTE.do?folio=456669&amp;tipoDTE=BOLETA&amp;idDominio=2587935&amp;format=PDF"> <img src="static/images/icon_pdf.png" alt="Descargar PDF" title="Descargar PDF" style="border: none;">
+			</a>
+		</div>
+	</div>
+</div>			
 ```
 
 - Para carro de compra vacío:
