--- a/Bitacora/s6012018.md
+++ b/Bitacora/s6012018.md
@@ -26,13 +26,13 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 	- [ ] Agregar Dominio
 		- [ ] Crear Dominio
 	- [ ] Editar Dominio
-	- [ ] **Mis Dominios**
+	- [x] **Mis Dominios**
 		- [ ] Verificar listado de dominios 
 			- [x] checkbox
-			- [ ] estado
+			- [x] estado
 			- [x] dominio
 			- [x] titular
-			- [ ] cargos contacto
+			- [x] cargos contacto
 			- [x] expiracion
 			- [x] carrito
 		- ***Filtros***
@@ -50,16 +50,16 @@ La idea macro es hacer esto escalable, por ejemplo, si deseo testear el sistema 
 			- [x] Estado/Eliminados
 		- ***Modificar Dominio***
 			- [x] redirección
-	- [ ] Comprobantes
-		- [ ] Iniciar sesión
-		- [ ] Acceder a DTE
-		- [ ] Elección de dominio
+	- [x] Comprobantes
+		- [x] Iniciar sesión
+		- [x] Acceder a DTE
+		- [x] Elección de dominio
 		- **Verificar resultados por dominio**
-			- [ ] Sin dominios
-			- [ ] Nro Documento
-			- [ ] Fecha
-			- [ ] tipo de documento
-			- [ ] Verificar links de 'Descarga' (xlm y pdf)
+			- [x] Sin dominios
+			- [x] Nro Documento
+			- [x] Fecha
+			- [x] tipo de documento
+			- [x] Verificar links de 'Descarga' (xlm y pdf)
 	- [ ] Avisos
 	- [ ] Carro
 
