--- a/Bitacora/s7012018.md
+++ b/Bitacora/s7012018.md
@@ -17,7 +17,7 @@
 
 ## Observaciones y comentarios
 
-- Para carro de compra vacío:
+- Para carro de compra vacío dentro de class="mensaje":
 ```html			
 <div class="enc_mensaje">
 	<p style="width:400px; float:left;">					 
@@ -32,4 +32,158 @@
 		</li>
 	
 </ul>
+```
+
+- Elemento de Carro de compra dentro de class="contenedor_scroll":
+```html
+<div class="caja_pagos">
+<div class="contenedor_datos">
+	<div class="input_mis_pagos">
+		<a href="/registrar/eliminarDominioCarro.do?id=2629460">
+			<img class="ico_boton" alt="" src="static/icons/cart_delete.png">
+		</a>
+	</div>
+	<div class="dominio_pago">
+		haineann.cl
+	</div>
+	<div class="dato_pago">
+		<p>
+			Andrea Paz Benavides Jaramillo
+		</p>
+	</div>
+	<div class="dato_pago" style="width: 190px;">
+		<input id="detalles[0].tipoOperacion.id" name="detalles[0].tipoOperacion.id" value="1" type="hidden">
+		<p>Inscripción de dominio</p>
+	</div>
+	<div class="dato_pago styled_select" style="width: 100px;">
+		<!--[if !IE]> -->
+		<div class="notIE">
+			<!-- <![endif]-->
+			<label> <select id="detalles0.tarifaMoneda.id" name="detalles[0].tarifaMoneda.id" class="carro_select_annos" onchange="document.carro.submit();">
+						<option value="1">1&nbsp;Año</option>
+						<option value="2" selected="selected">2&nbsp;Años</option>
+						<option value="3">3&nbsp;Años</option>
+						<option value="4">4&nbsp;Años</option>
+						<option value="5">5&nbsp;Años</option>
+						<option value="6">6&nbsp;Años</option>
+						<option value="7">7&nbsp;Años</option>
+						<option value="8">8&nbsp;Años</option>
+						<option value="9">9&nbsp;Años</option>
+						<option value="10">10&nbsp;Años</option>	
+				</select>
+			</label>
+			<!--[if !IE]> -->
+		</div>
+		<!-- <![endif]-->
+	</div>
+	<div class="total" style="width: 110px">
+		<p style="width: 105px; text-align: right">
+			CLP $18.900
+		</p>
+	</div>
+</div>
+</div>
+```
+
+- Carro de compra : totales y moneda
+```html
+<div class="total_final">
+
+	<div id="contenedor_moneda" class="contenedor_moneda" style="vertical-align: top; height: 30px; display: inline-block;">
+		<span style="font-size: 19px; vertical-align: text-bottom; color: #222; margin: 10px; display: inline;">
+			Elegir Tipo de Moneda <span class="help topic_41 link_action" style="vertical-align: middle;">&nbsp;(?)</span>
+		</span>
+		<div id="radiobuttons_moneda" style="display: inline-block" class="yui-buttongroup">
+			<input id="codigoMonedaActual" name="codigoMonedaActual" value="CLP" type="hidden">
+			
+				<span class="yui-button-checked yui-radio-button-checked yui-button yui-radio-button" id="CLP"><span class="first-child"><button type="button" tabindex="0" id="CLP-button">CLP</button></span></span>
+			
+				<span class="yui-button yui-radio-button" id="USD"><span class="first-child"><button type="button" tabindex="0" id="USD-button">USD</button></span></span>
+			
+		</div>
+	</div>
+	<div class="carro_compras_valor_total">
+		Total CLP $	18.900
+	</div>
+
+</div>
+```
+
+- Carros de compra : medios de pago
+```html
+<div id="medios_de_pago" class="medios_de_pago">
+	<div class="medio_pago on">
+		<div class="medio_pago_datos">
+			<div class="medio_pago_nombre">Webpay</div>
+			<div class="medio_pago_texto">
+				<p>Permite pagar en lí­nea (a través de Internet) con una
+					<strong>tarjeta de crédito</strong> o <strong>tarjeta de débito</strong>, usando el sistema seguro de Transbank.</p>
+				<p>
+					Este sistema permite un <strong>registro inmediato
+						del pago en NIC Chile, y produce la activación del dominio
+						en breve</strong>.
+				</p>
+			</div>
+			<div class="medio_pago_boton">
+				<input name="medio_pago" id="medio_pago_webpay" class="medio_pago_radiobutton" checked="" type="radio"><label for="medio_pago_webpay"><img src="static/images/webpay.png" alt="Botón de pago Webpay" style="vertical-align: middle" width="110"></label>
+			</div>
+		</div>
+	</div>
+	<div class="medio_pago off">
+		<div class="medio_pago_datos">
+			<div class="medio_pago_nombre">Khipu</div>
+			<div class="medio_pago_texto">
+				<p>Usar Khipu es simple y seguro. Utilizas tu Banco,
+					simplificando tus transferencias.</p>
+				<p>
+					Este sistema permite un <strong>registro inmediato
+						del pago en NIC Chile, y produce la activación del dominio
+						en breve.</strong>
+				</p>
+			</div>
+			<div class="medio_pago_boton">
+				<input name="medio_pago" id="medio_pago_khipu" class="medio_pago_radiobutton" type="radio"><label for="medio_pago_khipu"><img src="static/images/khipu.png" alt="Botón de pago Khipu" style="vertical-align: middle" width="110"></label>
+			</div>
+		</div>
+	</div>
+	<div class="medio_pago off">
+		<div class="medio_pago_datos">
+			<div class="medio_pago_nombre">Servipag en línea</div>
+			<div class="medio_pago_texto">
+				<p>
+					Podrá pagar utilizando el botón de pago en línea de
+					Servipag, lo que le permite <strong>acceder a
+						numerosos medios de pago, como cuentas bancarias y tarjetas
+						de casas comerciales</strong>.
+				</p>
+				<p>
+					Este sistema permite un <strong>registro inmediato
+						del pago en NIC Chile, y produce la activación del dominio
+						en breve</strong>.
+				</p>
+			</div>
+			<div class="medio_pago_boton">
+				<input name="medio_pago" id="medio_pago_servipag_online" class="medio_pago_radiobutton" type="radio"><label for="medio_pago_servipag_online"><img src="static/images/botonpago-sp-grande.png" alt="Botón de pago Servipag en Línea" style="vertical-align: middle" width="110"></label>
+			</div>
+		</div>
+	</div>
+	<div class="medio_pago off">
+		<div class="medio_pago_datos">
+			<div class="medio_pago_nombre">Servipag</div>
+			<div class="medio_pago_texto">
+				<p>
+					Obtendrá una colilla de pago en formato PDF lista para
+					imprimir, que puede ser pagada en cualquier sucursal de
+					Servipag <strong>dentro del plazo de vigencia del
+						cupón</strong>. La activación del dominio requiere al menos dos
+					días hábiles.
+				</p>
+			</div>
+			<div class="medio_pago_boton">
+				<input name="medio_pago" id="medio_pago_servipag" class="medio_pago_radiobutton" type="radio">
+				<label for="medio_pago_servipag"><img src="static/images/servipag.png" alt="Botón de pago Servipag" style="vertical-align: middle" width="110"></label>
+			</div>
+		</div>
+	</div>
+</div>
 ```
