--- a/Bitacora/s7012018.md
+++ b/Bitacora/s7012018.md
@@ -14,6 +14,12 @@
 	- [ ] Editar Dominio
 	- [ ] Avisos
 	- [ ] Carro
+		- [ ] Carro vacio
+		- **Contenido**
+			- [ ] Por dominio
+			- [ ] Totales y Moneda
+			- [ ] Medios de Pago
+			- [ ] Compra
 
 ## Observaciones y comentarios
 
@@ -182,6 +188,124 @@
 			<div class="medio_pago_boton">
 				<input name="medio_pago" id="medio_pago_servipag" class="medio_pago_radiobutton" type="radio">
 				<label for="medio_pago_servipag"><img src="static/images/servipag.png" alt="Botón de pago Servipag" style="vertical-align: middle" width="110"></label>
+			</div>
+		</div>
+	</div>
+</div>
+```
+- Carro de compra: compra
+```html
+<div class="contenedor_pdc2" style="min-height: 0;">
+					
+	<div id="botoneraKhipu" style="display: none;">
+		<div class="medio_pago_info">
+			<div class="medio_pago_info_contenido">
+			<div class="medio_pago_info_icono">
+			<img src="static/icons/info_icon.png" alt="">
+			</div>
+			<div class="medio_pago_info_instrucciones">
+			<p style="font-weight: bold">
+			Estimado
+			Andrea Paz Benavides Jaramillo
+			</p>
+			<p>Presione el botón "Ir a Khipu" para dirigirse al sitio seguro de Khipu e ingresar los datos
+			de su cuenta bancaria.</p>
+			</div>
+				<div class="medio_pago_info_boton">
+				<form id="command" action="/registrar/caja/KHIPU/pagoOnline.do" method="post">
+				<input class="submitButton" style="height: 45px;" value="Ir a Khipu" type="submit">
+				<input name="CSRFP" value="43D9050B775CFDD61B3887566094B41B" type="hidden">
+				</form>
+					<div class="carro_compras_valor_total">
+						Total CLP $ 18.900
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div id="botoneraServipagOnline" style="display: none;">
+		<div class="medio_pago_info">
+			<div class="medio_pago_info_contenido">
+				<div class="medio_pago_info_icono">
+				<img src="static/icons/info_icon.png" alt="">
+				</div>
+				<div class="medio_pago_info_instrucciones">
+				<p style="font-weight: bold">
+				Estimado
+				Andrea Paz Benavides Jaramillo
+				</p>
+				<p>Presione el botón "Ir a Servipag" para dirigirse al sitio seguro de Servipag e ingresar los
+				datos de su tarjeta de crédito.</p>
+				</div>
+				<div class="medio_pago_info_boton">
+					<form id="command" action="/registrar/caja/SERVIPAG/pagoOnline.do" method="post">
+					<input class="submitButton" style="height: 45px;" value="Pagar en línea" type="submit">
+					<input name="CSRFP" value="43D9050B775CFDD61B3887566094B41B" type="hidden">
+					</form>
+
+					<div class="carro_compras_valor_total">
+						Total CLP $18.900
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div id="botoneraServipag" style="display: none;">
+		<div class="medio_pago_info">
+			<div class="medio_pago_info_contenido">
+				<div class="medio_pago_info_icono">
+				<img src="static/icons/info_icon.png" alt="">
+				</div>
+				<div class="medio_pago_info_instrucciones">
+				<p style="font-weight: bold">
+				Estimado
+				Andrea Paz Benavides Jaramillo
+				</p>
+				<p>
+				Obtendrá una colilla de pago en formato PDF lista para imprimir, que puede ser pagada en cualquier sucursal
+				de Servipag.<br>El sistema considera un plazo de 2 días hábiles para registrar el pago en NIC Chile.
+				</p>
+				</div>
+				<div class="medio_pago_info_boton">
+					<form method="get" action="/registrar/generarCupon.do">
+					<button type="submit" class="submitButton" style="height: 45px;">Obtener cupón de pago</button>
+					</form>
+					<div class="carro_compras_valor_total">
+						Total CLP $18.900
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div id="botoneraWebpay" style="display: block;">
+		<div class="medio_pago_info">
+			<div class="medio_pago_info_contenido">
+				<div class="medio_pago_info_icono">
+				<img src="static/icons/info_icon.png" alt="">
+				</div>
+				<div class="medio_pago_info_instrucciones">
+				<p style="font-weight: bold">
+				Estimado
+				Andrea Paz Benavides Jaramillo
+				</p>
+				<p>Presione el botón "Ir a Webpay" para dirigirse al sitio seguro de Transbank e ingresar los
+				datos de su <strong>tarjeta de crédito</strong> o <strong>tarjeta de débito</strong>.</p>
+				</div>
+				<div class="medio_pago_info_boton">
+					<form id="command" action="/registrar/caja/WEBPAY/pagoOnline.do" method="post">
+					<input class="submitButton" style="height: 45px;" value="Ir a Webpay" type="submit">
+					<input name="CSRFP" value="43D9050B775CFDD61B3887566094B41B" type="hidden">
+					</form>
+					<div class="carro_compras_valor_total">
+						otal CLP $ 18.900
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
