--- a/Bitacora/s7012018.md
+++ b/Bitacora/s7012018.md
@@ -14,7 +14,7 @@
 	- [ ] Editar Dominio
 	- [ ] Avisos
 	- [ ] Carro
-		- [ ] Carro vacio
+		- [x] Carro vacio
 		- **Contenido**
 			- [ ] Por dominio
 			- [ ] Totales y Moneda
