--- a/Bitacora/s7012018.md
+++ b/Bitacora/s7012018.md
@@ -17,8 +17,15 @@
 		- [x] Carro vacio
 		- **Contenido**
 			- [ ] Por dominio
+				- [ ] Eliminar del carro
+				- [ ] dominio
+				- [ ] titular
+				- [ ] Tipo de operacion
+				- [ ] Plazo (seleccionar)
+				- [ ] Valor
 			- [ ] Totales y Moneda
-			- [ ] Medios de Pago
+			- [x] Medios de Pago
+				- [x] Seleccionar medio de pago
 			- [ ] Compra
 
 ## Observaciones y comentarios
