--- a/Bitacora/s7012018.md
+++ b/Bitacora/s7012018.md
@@ -22,11 +22,11 @@
 				- [ ] titular
 				- [ ] Tipo de operacion
 				- [ ] Plazo (seleccionar)
-				- [ ] Valor
-			- [ ] Totales y Moneda
-			- [x] Medios de Pago
+				- [ ] Valor [CLP,USD]
+			- [x] Totales y Moneda 
+			- [x] Medios de Pago [CLP,USD]
 				- [x] Seleccionar medio de pago
-			- [ ] Compra
+			- [x] Compra [CLP,USD]
 
 ## Observaciones y comentarios
 
