--- a/Bitacora/s8012018.md
+++ b/Bitacora/s8012018.md
@@ -17,10 +17,10 @@
 		- [x] Carro vacio
 		- **Contenido**
 			- [ ] Por dominio
-				- [ ] Eliminar del carro
-				- [ ] dominio
-				- [ ] titular
-				- [ ] Tipo de operacion
+				- [x] Eliminar del carro
+				- [x] dominio
+				- [x] titular
+				- [x] Tipo de operacion
 				- [ ] Plazo (seleccionar)
 				- [ ] Valor [CLP,USD]
 			- [x] Totales y Moneda 
