--- a/Bitacora/s8012018.md
+++ b/Bitacora/s8012018.md
@@ -29,6 +29,7 @@
 			- [x] Compra [CLP,USD]
 
 ## Observaciones y comentarios
+- Actualización de README
 
 - AgregarUsuario: Botón Continuar
 ```html
