--- a/Bitacora/s8012018.md
+++ b/Bitacora/s8012018.md
@@ -13,16 +13,16 @@
 		- [ ] Crear Dominio
 	- [ ] Editar Dominio
 	- [ ] Avisos
-	- [ ] Carro
+	- [x] Carro
 		- [x] Carro vacio
 		- **Contenido**
-			- [ ] Por dominio
+			- [x] Por dominio
 				- [x] Eliminar del carro
 				- [x] dominio
 				- [x] titular
 				- [x] Tipo de operacion
-				- [ ] Plazo (seleccionar)
-				- [ ] Valor [CLP,USD]
+				- [x] Plazo (seleccionar)
+				- [x] Valor [CLP,USD]
 			- [x] Totales y Moneda 
 			- [x] Medios de Pago [CLP,USD]
 				- [x] Seleccionar medio de pago
